--- a/Igraliste/package.json
+++ b/Igraliste/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.2.1",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
+    "react-under-construction": "^0.3.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
