--- a/Igraliste/package.json
+++ b/Igraliste/package.json
@@ -17,7 +17,8 @@
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-under-construction": "^0.3.0",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "update-notifier": "^7.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
