--- a/Igraliste/package.json
+++ b/Igraliste/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-parallax": "^3.5.1",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1",
     "react-under-construction": "^0.3.0",
