--- a/Igraliste/render.yaml
+++ b/Igraliste/render.yaml
@@ -1,11 +1,13 @@
 services:
-  - type: static
+  - type: web
     name: igraliste
-    env: static
+    runtime: static
+    repo: https://github.com/Milos191405/Igraliste
     buildCommand: npm install && npm run build
-    publishDirectory: dist
+    staticPublishPath: dist
+    autoDeploy: true
     routes:
       - type: rewrite
         source: /*
         destination: /index.html
-git status 
+version: "1"
