--- a/Igraliste/render.yaml
+++ b/Igraliste/render.yaml
@@ -3,11 +3,9 @@ services:
     name: igraliste
     runtime: static
     repo: https://github.com/Milos191405/Igraliste
-    buildCommand: npm install && npm run build
+    buildCommand: npm install ; npm run build
     staticPublishPath: dist
-    autoDeploy: true
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+    autoDeploy: false  
 version: "1"
+
+
