--- a/Igraliste/package.json
+++ b/Igraliste/package.json
@@ -13,9 +13,15 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.26.1"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.1",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
     "vite": "^4.5.3"
